--- a/Discrete Mathematics/apm3_discreteMaths.tex
+++ b/Discrete Mathematics/apm3_discreteMaths.tex
@@ -55,7 +55,7 @@
 \newcommand{\restrict}{\upharpoonright}
 \newcommand{\xor}{\oplus}
 
-\title{Discrete Mathematics}
+\title{Introduction to Discrete Mathematics}
 \author{from 93APM3 Applied Mathematics 3}
 \date{AY25/26 Sem 2} % delete this line to display the current date
 
@@ -258,7 +258,7 @@ An \textit{indirect proof} is one which does not start with the premise and end 
 \paragraph{Trivial proof:}Given that $q$ is true, then it follows that $p \implies q$ is also true. Such a proof is known as the \textit{trivial proof}.
 
 \subsubsection{Proof by Contradiction}
-We prove the statement $p$ is true when we prove that $\tilde{p}\rightarrow\left(r\land\tilde{r}\right)$, or $\tilde{p}\rightarrow\text{false}$.
+A type of indirect proof. We prove the statement $p$ is true when we prove that $\tilde{p}\rightarrow\left(r\land\tilde{r}\right)$, or $\tilde{p}\rightarrow\text{false}$.
 \begin{exercise}
 Prove $\sqrt{2}$ is irrational.
 \end{exercise}
