--- a/Revision/Vectors/vectors.tex
+++ b/Revision/Vectors/vectors.tex
@@ -109,5 +109,8 @@ The \textbf{scalar product} or dot product of two vectors is
 \]
 where $\theta$ is the angle between $\vec{a}$ and $\vec{b}$.
 \end{definition}
+\begin{definition}
+
+\end{definition}
 
 \end{document}
